--- a/src/components/main/main.css
+++ b/src/components/main/main.css
@@ -1,12 +1,16 @@
-
+.reactProductPage{
+    display: flex;
+    flex-direction: column;
+}
 
 .product{
     display: flex;
     align-items: flex-start;
     justify-content: center;
-    padding: 0 0 1.4rem;
+    /*padding: 0 0 1.4rem;*/
     width: 100%;
-    height: 48rem;
+    /*height: 48rem;*/
+    height: auto;
     margin: 0;
     margin-top: 4rem;
 }
@@ -32,14 +36,25 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    border: .01rem solid black
+  /*  border: .01rem solid black*/
 }
 .productImages-sku >img{
    width: 30rem;
 }
 
-.productInfo{
-    width: 37%;
-    height: 100%;
-  
+@media(max-width:1191px){
+    .product{
+        flex-direction: column;
+        height: auto;
+    }
+
+    .productImages{
+        width: 100%;
+    }
+}
+
+@media(max-width:878px){
+    .productImages-sku >img{
+        width: 100%;
+     }
 }
