--- a/src/components/main/productInfo/productInfo.css
+++ b/src/components/main/productInfo/productInfo.css
@@ -38,6 +38,7 @@
     padding: 0 !important;
 }
 
+
 .skuselector-size ul > li {
     list-style: none;
     cursor: pointer;
@@ -96,12 +97,18 @@
     display: flex;
     align-items: center;
     justify-content: center;
+
+    cursor: pointer;
 }
 
 .productInfo .quantidadeBloco > strong{
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+.productInfo .quantidadeBloco:active{
+    background: #b3b7b9;
 }
 
 .productInfo .quantidade .mensagem-frete-gratis{
@@ -145,6 +152,7 @@
 .productInfo .frete .infoFrete,.calculo-frete{
     display: flex;
     justify-content: space-between;
+    margin-top: 1rem;
 }
 
 .productInfo .frete .calculo-frete>input {
