--- a/src/components/slider/slider.css
+++ b/src/components/slider/slider.css
@@ -7,41 +7,75 @@
 }
 
 .container{
-    max-width: 75vh;
+    margin-top: 10rem;
+    max-width: 68vw; 
+}
+
+.container>h2{
+    margin-bottom: 3rem;
 }
 
 .container .carousel {
     display: flex; 
-    overflow-x: 0;
+    height: 30rem;
+    overflow-x: auto;
+    overflow-y: hidden;
+    width: 100%;
     scroll-behavior: smooth;
+
+}
+
+.container .carousel::-webkit-scrollbar{
+    display: none;
 }
 
 .container .carousel .item {
-    margin: 10px;
-    height: 100%;
-    object-fit: cover;
-    border-radius: 16px; 
+    margin: 1.2rem  8rem 0 1.2rem;
+    /*width: 18rem;*/
+    width: 18rem;
+    height:100%;
+    border-radius: 1rem; 
+    
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.container .carousel .item >img{
+    width: 18rem;
+    height: 18rem;
 }
 
 .container .carousel .item .info{
-    height: 140px;
+    margin-top: 2rem;
+    width: 100%;
+    height: 8.75rem;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    align-items: center;
 }
 
-.container .carousel .item .info span {
+
+
+/*.container .carousel .item .info span {
     display: block;
     text-align: center;
     color: black;
-    padding: 5px;
-    border-radius: 10px;
-}
+    padding: .3rem;
+    border-radius: .6rem;
+}*/
 
 .container .carousel .item .info .name {
     font-size: 1.2rem; 
     font-size: bold;
-    margin:10px 0; 
+    margin:.6rem 0; 
+
+    max-width: 25ch;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
     
 }
 
@@ -53,8 +87,58 @@
 }
 
 .container .carousel .item .info .oldPrice{
-    margin-top: 10px;
+    margin-top: .62rem;
     font-size: 1.2rem;
     font-weight: bold;
     background-color: #ff7e3b;
+}
+
+.container .carousel .item .info .comprar {
+    margin-top: 1rem;
+    background-color: black;
+    color: white;
+    width: 100%;
+    height: 2rem;
+    text-align: center;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.container .carousel .item .info .comprar>p{
+    font-weight: 700;
+ 
+}
+
+
+.container .buttons-slider{
+    width: 100%;
+    text-align: center;
+    position: relative;
+    bottom: 0;
+}
+
+.container .buttons-slider>button {
+    
+    background-color: transparent;
+    border:none;
+    cursor: pointer;
+    width: 50%;
+    margin-top: 3rem;
+}
+
+.container .buttons-slider>button>img{
+    width: 3rem;
+}
+
+
+.container .buttons-slider> button:first-child img {
+    transform: rotate(180deg);
+}
+
+@media(max-width:1191px){
+    .container{
+        width: 100vw !important;
+    }
 }
