--- a/src/components/main/productImages/productImages.css
+++ b/src/components/main/productImages/productImages.css
@@ -25,19 +25,19 @@
 
 }
 
-.productImages-wrapper
 
 .productImages-sku {
-  width: 80%;
+  width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
 .productImages-sku .productImages-sku-slider {
-  overflow-x: auto;
+  overflow-x: hidden;
   overflow-y: hidden;
-  width: 35rem;
+  /*width: 40rem;*/
+  width: 60rem;
   scroll-behavior: smooth;
 
   display: flex;
@@ -48,7 +48,8 @@
 }
 
 .productImages .item-sku {
-  margin: 1.2rem 11rem 0 1.2rem;
+ /* margin: 1.2rem 11rem 0 1.2rem;*/
+ margin: 1.2rem 30rem 0 9rem;
   width: 100%;
   height: 100%;
   border-radius: 1rem;
@@ -65,7 +66,7 @@
 
 
 .productImages-sku .buttons-slider-image-sku{
-   width: 140%;
+   width: 100%;
    margin-top: -25rem;
    margin-left: -8rem;
    display: flex;
@@ -95,6 +96,28 @@
     right: 0;
 }
 
+@media(max-width: 1577px){
+  .productImages-sku .productImages-sku-slider{
+    width: 40rem;
+  }
+
+  .productImages .item-sku{
+      margin: 1.2rem 13rem 0 2rem;
+  }
+  .productImages  .diferent{
+    margin-right: 0rem !important;
+  }
+}
+
+
+
+
+@media(max-width:1323px){
+      .productImages-wrapper {
+     display: none;
+  }
+}
+
 @media (max-width: 1191px) {
   .product {
     flex-direction: column;
@@ -103,6 +126,14 @@
 
   .productImages {
     width: 100%;
+  }
+
+  .productImages-sku .productImages-sku-slider{
+    width: 40rem;
+  }
+
+  .productImages .item-sku{
+      margin: 1.2rem 9rem 0 2rem;
   }
 }
 
@@ -123,9 +154,7 @@
         width: 100%;
         margin:0
      } 
-     .productImages-wrapper {
-     display: none;
-  }
+ 
 
 
 
