--- a/src/components/main/productInfo/productInfo.css
+++ b/src/components/main/productInfo/productInfo.css
@@ -2,9 +2,11 @@
 .productInfo{
     width: 35%;
     height: 100%;
-
+    
     display: flex;
     flex-direction: column;
+
+    margin-right: 1rem;
   
 }
 
@@ -14,6 +16,12 @@
     letter-spacing: .04rem;
     color: #000; 
     text-transform: uppercase;
+}
+
+.productInfo .breadcrumb >span >a{
+   text-decoration: none;
+   color: #8e9396;
+   font-size: .75rem;
 }
 
 
@@ -54,6 +62,20 @@
     
     text-align: center;
 
+}
+
+.skuselector-size ul > li:hover{
+    background-color: #000;
+    color: white;
+}
+
+.productInfo .skuselector .quantidade-de-unidade>span{
+    color: #eb5757; 
+    font-size: .8rem;
+    font-style: italic;
+    line-height: 1rem;
+    letter-spacing: .04rem;
+    margin-top: 1rem;
 }
 
 .productInfo .buybutton {
