--- a/src/components/slider/slider.css
+++ b/src/components/slider/slider.css
@@ -100,6 +100,7 @@
     width: 100%;
     height: 2rem;
     text-align: center;
+    cursor: pointer;
 
     display: flex;
     justify-content: center;
