footer:cursor:pointer

--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -149,6 +149,7 @@
     color: #fff;
     letter-spacing: .04rem;
     text-align: center;
+    cursor: pointer;
  }
 
  .hibrido-footer .section01-footer .autoria{
