--- a/src/components/slider/slider.css
+++ b/src/components/slider/slider.css
@@ -1,63 +1,57 @@
-
-
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-.container{
-    margin-top: 10rem;
-    max-width: 68vw; 
+.container {
+  margin-top: 10rem;
+  max-width: 68vw;
 }
 
-.container>h2{
-    margin-bottom: 3rem;
+.container > h2 {
+  margin-bottom: 3rem;
 }
 
 .container .carousel {
-    display: flex; 
-    height: 30rem;
-    overflow-x: auto;
-    overflow-y: hidden;
-    width: 100%;
-    scroll-behavior: smooth;
-
+  display: flex;
+  height: 30rem;
+  overflow-x: auto;
+  overflow-y: hidden;
+  width: 100%;
+  scroll-behavior: smooth;
 }
 
-.container .carousel::-webkit-scrollbar{
-    display: none;
+.container .carousel::-webkit-scrollbar {
+  display: none;
 }
 
 .container .carousel .item {
-    margin: 1.2rem  8rem 0 1.2rem;
-    /*width: 18rem;*/
-    width: 18rem;
-    height:100%;
-    border-radius: 1rem; 
-    
+  margin: 1.2rem 8rem 0 1.2rem;
+  /*width: 18rem;*/
+  width: 18rem;
+  height: 100%;
+  border-radius: 1rem;
 
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
-.container .carousel .item >img{
-    width: 18rem;
-    height: 18rem;
+.container .carousel .item > img {
+  width: 18rem;
+  height: 18rem;
 }
 
-.container .carousel .item .info{
-    margin-top: 2rem;
-    width: 100%;
-    height: 8.75rem;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+.container .carousel .item .info {
+  margin-top: 2rem;
+  width: 100%;
+  height: 8.75rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
-
-
 
 /*.container .carousel .item .info span {
     display: block;
@@ -68,82 +62,77 @@
 }*/
 
 .container .carousel .item .info .name {
-    font-size: 1.2rem; 
-    font-size: bold;
-    margin:.6rem 0; 
+  font-size: 1.2rem;
+  font-size: bold;
+  margin: 0.6rem 0;
 
-    max-width: 25ch;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-    
+  max-width: 25ch;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
-.container .carousel .item .info .oldPrice{
-    font-size: 0.8rem;
-    text-decoration: line-through;
-    flex-grow: 1;
-    color:#e81a5d;
+.container .carousel .item .info .oldPrice {
+  font-size: 0.8rem;
+  text-decoration: line-through;
+  flex-grow: 1;
+  color: #e81a5d;
 }
 
-.container .carousel .item .info .oldPrice{
-    margin-top: .62rem;
-    font-size: 1.2rem;
-    font-weight: bold;
-    background-color: #ff7e3b;
+.container .carousel .item .info .oldPrice {
+  margin-top: 0.62rem;
+  font-size: 1.2rem;
+  font-weight: bold;
+  background-color: #ff7e3b;
 }
 
 .container .carousel .item .info .comprar {
-    margin-top: 1rem;
-    background-color: black;
-    color: white;
-    width: 100%;
-    height: 2rem;
-    text-align: center;
-    cursor: pointer;
+  margin-top: 1rem;
+  background-color: black;
+  color: white;
+  width: 100%;
+  height: 2rem;
+  text-align: center;
+  cursor: pointer;
 
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.container .carousel .item .info .comprar:hover{
-    background: rgb(26, 25, 25);
+.container .carousel .item .info .comprar:hover {
+  background: rgb(26, 25, 25);
 }
 
-.container .carousel .item .info .comprar>p{
-    font-weight: 700;
- 
+.container .carousel .item .info .comprar > p {
+  font-weight: 700;
 }
 
-
-.container .buttons-slider{
-    width: 100%;
-    text-align: center;
-    position: relative;
-    bottom: 0;
+.container .buttons-slider {
+  width: 100%;
+  text-align: center;
+  position: relative;
+  bottom: 0;
 }
 
-.container .buttons-slider>button {
-    
-    background-color: transparent;
-    border:none;
-    cursor: pointer;
-    width: 50%;
-    margin-top: 3rem;
+.container .buttons-slider > button {
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+  width: 50%;
+  margin-top: 3rem;
 }
 
-.container .buttons-slider>button>img{
-    width: 3rem;
+.container .buttons-slider > button > img {
+  width: 3rem;
 }
 
-
-.container .buttons-slider> button:first-child img {
-    transform: rotate(180deg);
+.container .buttons-slider > button:first-child img {
+  transform: rotate(180deg);
 }
 
-@media(max-width:1191px){
-    .container{
-        width: 100vw !important;
-    }
+@media (max-width: 1191px) {
+  .container {
+    width: 100vw !important;
+  }
 }
