--- a/src/components/slider/slider.css
+++ b/src/components/slider/slider.css
@@ -18,7 +18,7 @@
   height: 30rem;
   overflow-x: auto;
   overflow-y: hidden;
-  width: 100%;
+  max-width: 1000px;
   scroll-behavior: smooth;
 }
 
@@ -27,7 +27,7 @@
 }
 
 .container .carousel .item {
-  margin: 1.2rem 8rem 0 1.2rem;
+  margin: 1.2rem 12rem 0 1rem;
   /*width: 18rem;*/
   width: 18rem;
   height: 100%;
