--- a/src/components/main/productImages/productImages.css
+++ b/src/components/main/productImages/productImages.css
@@ -14,7 +14,7 @@
 }
 
 .productImages-wrapper .box-image {
-  width: 30%;
+  width: min(7rem,100%) ;
   border: 3px solid #f2f2f2;
   margin-left: 1rem;
 }
@@ -46,7 +46,7 @@
 
 .productImages .item-sku {
   /* margin: 1.2rem 11rem 0 1.2rem;*/
-  margin: 1.2rem 30rem 0 9rem;
+  margin: 1.2rem 20rem 0 9rem;
   width: 100%;
   height: 100%;
   border-radius: 1rem;
@@ -96,7 +96,7 @@
   }
 
   .productImages .item-sku {
-    margin: 1.2rem 13rem 0 2rem;
+    margin: 1.2rem 12rem 0 2rem;
   }
   .productImages .diferent {
     margin-right: 0rem !important;
@@ -180,4 +180,5 @@
     margin-bottom: 3rem;
     margin-top: -10rem;
   }
+
 }
